# adaptive-multi-agent-rag

./: README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/api/: routes.py
backend/app/core/: config.py  health.py  logging.py
docs/architecture/: high_level_architecture.md  project_folder_structure.md
docs/decisions/: 001_project_scope.md
docs/milestones/: 01_mvp_enterprise_rag.md  02_redis_performance_layer.md  03_multi_agent_workflow.md
frontend/src/: App.tsx
